--- a/config.example.json
+++ b/config.example.json
@@ -45,6 +45,10 @@
             "json": "application/json",
             "ttl": "text/turtle"
         },
+        "compression": {
+            "gz": "gzip",
+            "bz": "bzip"
+        },
         "license": "http://creativecommons.org/publicdomain/zero/1.0/"
     }
 }
