--- a/config.example.json
+++ b/config.example.json
@@ -46,8 +46,8 @@
             "ttl": "text/turtle"
         },
         "compression": {
-            "gz": "gzip",
-            "bz": "bzip"
+            "gzip": "gz",
+            "bzip": "bz"
         },
         "license": "http://creativecommons.org/publicdomain/zero/1.0/"
     }
